Доработал обработку кнопок назад при работе с сиропами и добавил работу с альтернативным молоком